# lab1_data_plattform_DE25

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: analysis.py
