[project]
name = "lab1-product-analysis"
version = "0.1.0"
description = "ETL pipeline for product data analysis - Lab 1"
requires-python = ">=3.10"
authors = [
    {name = "Student", email = "student@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "pandas>=2.0.0",
    "jupyter>=1.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py310']